--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intro_views_flutter: ^3.2.0
+  flutter_overboard: ^3.0.0
+  sk_onboarding_screen: ^1.0.1
+
 
 dev_dependencies:
   flutter_test:
