--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intro_views_flutter: ^3.2.0
   flutter_overboard: ^3.0.0
   sk_onboarding_screen: ^1.0.1
+  carousel_pro: ^1.0.0
 
 
 dev_dependencies:
@@ -63,6 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  assets:
+    - assets/images.jpeg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
