--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_overboard: ^3.0.0
   sk_onboarding_screen: ^1.0.1
   carousel_pro: ^1.0.0
+  dropdown_search: ^2.0.1
 
 
 dev_dependencies:
@@ -66,6 +67,7 @@ flutter:
   # assets:
   assets:
     - assets/images.jpeg
+    - assets/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
