--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sk_onboarding_screen: ^1.0.1
   carousel_pro: ^1.0.0
   dropdown_search: ^2.0.1
+  flutter_form_builder: ^7.0.0
 
 
 dev_dependencies:
