--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   sk_onboarding_screen: ^1.0.1
   carousel_pro: ^1.0.0
   dropdown_search: ^2.0.1
-  flutter_form_builder: ^7.0.0
+  the_country_number_widgets: ^0.9.2+2
+  pin_entry_text_field: ^0.1.4
+  
 
 
 dev_dependencies:
