--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   dropdown_search: ^2.0.1
   the_country_number_widgets: ^0.9.2+2
   pin_entry_text_field: ^0.1.4
+  chips_choice: ^2.0.1
+  multi_select_flutter: ^4.0.0
+  multiselectchipgroup: ^0.1.1
+
   
 
 
