--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   dropdown_search: ^2.0.1
   the_country_number_widgets: ^0.9.2+2
   pin_entry_text_field: ^0.1.4
-  chips_choice: ^2.0.1
-  multi_select_flutter: ^4.0.0
   multiselectchipgroup: ^0.1.1
+  material_floating_search_bar: ^0.3.6
+  flappy_search_bar_ns: ^2.0.2
 
   
 
