--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_switch: ^0.3.2
   list_tile_switch: ^1.0.0
   percent_indicator: "^2.1.7+2"
+  syncfusion_flutter_datepicker: ^19.3.59
+  custom_horizontal_calendar: ^0.1.3
 
   
 
@@ -84,6 +86,11 @@ flutter:
     - assets/psych.jpeg
     - assets/therapist.jpeg
     - assets/diab.jpeg
+    - assets/workout.gif
+    - assets/workoutone.gif
+    - assets/lunges.gif
+    - assets/squat.gif
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
