--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   multiselectchipgroup: ^0.1.1
   list_tile_switch: ^1.0.0
   percent_indicator: "^2.1.7+2"
+  firebase_core: ^1.10.6
+  firebase_analytics: ^9.0.4
+  firebase_auth: ^3.3.4
+  cloud_firestore: ^3.1.5
+  http: ^0.13.4
  
 
   
