--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   firebase_auth: ^3.3.4
   cloud_firestore: ^3.1.5
   http: ^0.13.4
+  get: ^4.6.1
+  health: ^3.0.5
+  provider: ^6.0.1
  
 
   
@@ -87,7 +90,6 @@ flutter:
     - assets/psych.jpeg
     - assets/therapist.jpeg
     - assets/diab.jpeg
-    - assets/workout.gif
     - assets/workoutone.gif
     - assets/lunges.gif
     - assets/squat.gif
